2009-02-02  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* include/config.h.in: Removed define of "DEFAULT_PORT"
	which is not used anywhere (it defaulted to ancient 3001).
	Removed define of "CLIENT_TIMEOUT". It is not used anywhere.
	Removed define of "SERVER_TIMEOUT". It is not used anywhere.
	Removed define of "LOGMORE". It is not used anywhere.
	Removed define of "NESSUSD_KEYFILE", "NESSUSD_USRKEYS",
	"NESSUSD_KEYLENGTH" and "NESSUSD_MAXPWDFAIL".  These are
	not used anywhere.
	Removed define of "PLUGIN_TIMEOUT". It is not used in
	this module.
	Removed define of "LOG_WHOLE_ATTACK". It is not used in
	this module.

2009-02-02  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Removed any code path that is conditional to "ENABLE_RHLST".
	It was never used, especially because it would require a file
	"rhlst.h" which isn't present at all.

	* libopenvas/hlst.h: Removed any code path that
	is conditional to "ENABLE_RHLST".

	* libopenvas/hlst.c: Removed any code path that
	is conditional to "ENABLE_RHLST".

	* include/config.h.in: Removed undef for ENABLE_RHLST.

2009-02-02  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Some cleanups. Basically removing never-used code.

	* libopenvas/plugutils.c (is_shell_command_present): Removed.
	It is not used anywhere except in
	openvas-plugins/plugins/nmap_wrapper/nmap_wrapper.c for
	very ancient NASL level.

	* libopenvas/plugutils.h: Removed proto accordingly.

	* libopenvas/popen.c (nessus_popen4): Removed unused
	code that is deaactivcated with "#if 0".
	(append_argv, destroy_argv): marked as to be deleted
	eventually.

	* libopenvas/network.c (nessus_print_SSL_certificate,
	nessus_print_peer_SSL_certificate): Removed. It is unused
	code that was deactivcated with "#if 0".
	(nsend): Removed unused code that was deactivated with
        "#if 0".

2009-01-28  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/store.c (store_plugin): When creating a